ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-app-ingress
  namespace: moris2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: services.k8s.community
    http:
      paths:
      - path: /moris2/hello
        backend:
          serviceName: hello-app
          servicePort: 8080
  tls:
  - hosts:
    - services.k8s.community
    secretName: tls-secret
